# tripsy-agent-api

./: =1.52  flightagent.ipynb  main.py  p.py  pyproject.toml  run_api.py
agents/: agent.py  coordinator.py  search_agents.py  travel_agents.py
agents/tools/: activities_finder.py  flights_finder.py
api/: main.py  models.py
